[evol V2] Nav left : comments +css correction z-index for leaflet

--- a/src/fibe/FrontendBundle/Resources/public/app/css/app.css
+++ b/src/fibe/FrontendBundle/Resources/public/app/css/app.css
@@ -186,7 +186,7 @@ ul
   position: fixed;
   height: 100%;
   overflow-y: auto;
-  z-index: 1000;
+  z-index: 2000;
   transition: all 0.4s ease 0s;
 }
 
@@ -227,7 +227,7 @@ ul
   position: fixed;
   height: 100%;
   overflow-y: auto;
-  z-index: 1000;
+  z-index: 2000;
   transition: all 0.4s ease 0s;
 }
 
